# ChordNarashi

./: .gitignore  CMakeLists.txt  README.md  android-triplet.cmake  vcpkg.json
Controler/: CMakeLists.txt
Controler/buttonChecker/: CMakeLists.txt
Controler/buttonChecker/include/: IButtonChecker.hpp  OnceButton.hpp  SDLButtonChecker.hpp  winButtonChecker.hpp
Controler/buttonChecker/src/: IButtonChecker.cpp  OnceButton.cpp  SDLButtonChecker.cpp  winButtonChecker.cpp
Controler/include/: allClassManager.hpp  keyButtonChecker.hpp  winButtonUpdater.hpp
Controler/mainPart/: CMakeLists.txt
Controler/mainPart/include/: Controler.hpp
Controler/mainPart/src/: Controler.cpp
Controler/src/: allClassManager.cpp  keyButtonChecker.cpp  winButtonUpdater.cpp
Model/: CMakeLists.txt
Model/mainPart/: CMakeLists.txt
Model/mainPart/include/: Model.hpp
Model/mainPart/src/: Model.cpp
Model/ringButtonTimingManager/: CMakeLists.txt
Model/ringButtonTimingManager/include/: IringButtonTimingManager.hpp  SustainTimingManager.hpp  noSustainTimingManager.hpp
Model/ringButtonTimingManager/src/: IringButtonTimingManager.cpp  SustainTimingManager.cpp  noSustainTimingManager.cpp
Model/toChordNamePart/: CMakeLists.txt
Model/toChordNamePart/include/: Button2Chord.hpp  ChordButtonManager.hpp  VirtualChordButton.hpp  enum_constant.hpp
Model/toChordNamePart/src/: Button2Chord.cpp  ChordButtonManager.cpp  VirtualChordButtons.cpp
Model/toNotePart/: CMakeLists.txt
Model/toNotePart/include/: Chord2StandardNote.hpp  Ichord2Note.cpp  Ichord2Note.hpp
Model/toNotePart/src/: Chord2StandardNote.cpp
Model/toRequestPart/: CMakeLists.txt
Model/toRequestPart/include/: InotePlayer.hpp  StandardNotePlayer.hpp
Model/toRequestPart/src/: InotePlayer.cpp  StandardNotePlayer.cpp
View/: CMakeLists.txt
View/Display/: CMakeLists.txt
View/Display/include/: IcharacterManager.hpp  Idisplay.hpp  SDLCharacterManager.hpp  SDLCircleManager.hpp  SDLManager.hpp  SDLTextureData.hpp  charaData.hpp  shapeData.hpp
View/Display/src/: SDLCharacterManager.cpp  SDLCircleManager.cpp  SDLManager.cpp  SDLTextureData.cpp  shapeData.cpp
View/MidiPlayer/: CMakeLists.txt
View/MidiPlayer/include/: IMidiNotePlayer.hpp  MIDIMessage.hpp  MiniaudioNotePlayer.hpp  RtMidiNotePlayer.hpp
View/MidiPlayer/src/: IMidiNotePlayer.cpp  MiniaudioNotePlayer.cpp
View/UI/: CMakeLists.txt
View/UI/include/: Block.hpp  CurrentChordBlock.hpp  DisplayCircleBlock.hpp  KeyBlock.hpp  RingingChordBlock.hpp  UI.hpp
View/UI/src/: Block.cpp  CurrentChordBlock.cpp  DisplayCircleBlock.cpp  KeyBlock.cpp  RingingChordBlock.cpp  UI.cpp
View/UIimpliment/: CMakeLists.txt
View/UIimpliment/include/: CurrentPressedChordBlock.hpp  charaDataInBlock.hpp
View/UIimpliment/src/: CurrentPressedChordBlock.cpp
View/include/: GuitarNotePlayer.hpp  Iui.hpp
View/mainPart/: CMakeLists.txt
View/mainPart/include/: View.hpp
View/mainPart/src/: View.cpp
View/sound/: CMakeLists.txt
View/sound/include/: IMidiNotePlayer.hpp  MIDIMessage.hpp  RtMidiNotePlayer.hpp
View/sound/src/: MIDIMessage.cpp  RtMidiNotePlayer.cpp
View/src/: GuitarNotePlayer.cpp  SDLManager.cpp  View.cpp
View/ui/: CMakeLists.txt
View/ui/include/: Iui.hpp  SDLManager.hpp
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
src/: Button2Chord.cpp  Button2Chord.hpp  ButtonUpdater.hpp  Chord2GuitarNote.cpp  Chord2GuitarNote.hpp  Chord2Note.hpp  ChordButtonManager.cpp  ChordButtonManager.h  ChordButtonManager.hpp  GuitarChord.cpp  GuitarChord.hpp  GuitarNotePlayer.cpp  GuitarNotePlayer.hpp  InotePlayer.cpp  InotePlayer.hpp  IrightButtonManager.hpp  SDLManager.cpp  SDLManager.hpp  SustainPedalManager.cpp  SustainPedalManager.hpp  allClassManager.cpp  allClassManager.hpp  button.hpp  enumNote.hpp  keyManager.cpp  keyManager.hpp  main.cpp  oncebutton.cpp  oncebutton.hpp  other_button.hpp  rightButtonBasic.cpp  rightButtonBasic.hpp  winButtonUpdater.cpp  winButtonUpdater.hpp
tests/: CMakeLists.txt  test_ChordButtonManager.cpp  test_GuitarNotePlayer.cpp  test_button.cpp  test_guitarchord.cpp  test_oncebutton.cpp  test_winButton.cpp
資料/: GUI実装に向けてやること  allClassManager役割検討.md  android_build_memo.md  android_build_procedure.md  architecture.md  class.pu  initflow.pu  loopflow.pu  データの場所逆引き.txt  作るべきクラスのメモ.txt  同時押しについて  回転ボタンは一度しか受け付けない.txt  文字情報について.md
